src/core/Claroline/CoreBundle/Tests/Stub/plugin/Valid/WithMigrations/ValidWithMigrations.php
<?php

namespace Valid\WithMigrations;

use Claroline\CoreBundle\Library\PluginBundle;

class ValidWithMigrations extends PluginBundle
{

}